required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------
- Refactor legend icon drawing (remove renderer specific versions)
  Add label styling or markers for annotation layer legend icons (#2917)

- Update EXTENT warning message (#2914)

- add support for SRSNAME parameter (#2899)

- add support for resultType (#2907)

- WFS 1.1.0 should use OWS Common 1.0.0 (#2925)

- clean up GEOS init and cleanup functions (#2929)

Version 5.4.0-beta3 (2009-3-5):
--------------------------------

- SLD: Correct crash with large class names (#2915)

- Added Java MapScript WIN64 support (#2250)

- Fixed a problem with long running processes, embedded scalebars/legends and AGG. (#2887)

- Applied patch to deal with a couple of WCS issues (time ranges, #2487) and PostGIS tileindex-based time filters (#1856)

- Adding -DUSE_GENERIC_MS_NINT to the WIN64 MapScript builds (#2250)

- Fixed C# the compiler options for MSVC 2008 (#2910)

- Fix build problem with mapogcsld.c when OWS services are not available (#473)

- Fix build on windows (maputil.c)

Version 5.4.0-beta2 (2009-2-25):
--------------------------------

- Fixed a problem where default shade symbols (solid fill, no size) were being
  scaled and not rendered as expected (related to #2896 I believe)

- Fixed a problem with offset polylines (AGG only) (#2868)

- Generate SLD version 1.1.0 (#473) 

- Tracking original geometry type so we can make better decisions on what
  positions to use with POSITION AUTO and annotation layers. (#2770)

- Setting up the same size units between the OGR auto-style and the 
  OGR label attribute binding option (#2900)

- Take better care of the extra items with the inline layers to 