@@ -226,7 +226,7 @@ imageObj *msImageCreatePDF(int width, int height, outputFormatObj *format,
         oImage->img.pdf->imagetmp = (imageObj *) 
           msImageCreateGD(map->width, map->height,  
                           msCreateDefaultOutputFormat(map, driver),
-                          map->web.imagepath, map->web.imageurl);
+                          map->web.imagepath, map->web.imageurl, map->resolution);
     }
     return oImage;
 }
@@ -1460,7 +1460,7 @@ int msDrawWMSLayerPDF(int nLayerId, httpRequestObj *pasReqInfo,
     {
         image_tmp = msImageCreateGD(map->width, map->height,  
                                     msCreateDefaultOutputFormat(map, driver),
-                                    map->web.imagepath, map->web.imageurl);
+                                    map->web.imagepath, map->web.imageurl, map->resolution);
     }
     else
     {
