@@ -1061,7 +1061,8 @@ imageObj *msImageCreateSWF(int width, int height, outputFormatObj *format,
     image->height = height;
     image->imagepath = NULL;
     image->imageurl = NULL;
-    
+    image->resolution = map->resolution;
+
     if (imagepath)
     {
         image->imagepath = strdup(imagepath);
@@ -1145,7 +1146,7 @@ imageObj *msImageCreateSWF(int width, int height, outputFormatObj *format,
         ((SWFObj *)image->img.swf)->imagetmp = (imageObj *) 
           msImageCreateGD(map->width, map->height,  
                           msCreateDefaultOutputFormat(map, driver),
-                          map->web.imagepath, map->web.imageurl);
+                          map->web.imagepath, map->web.imageurl, map->resolution);
     }
     free(driver);
     return image;
@@ -2830,7 +2831,7 @@ int msDrawWMSLayerSWF(int nLayerId, httpRequestObj *pasReqInfo,
     {
         image_tmp = msImageCreateGD(map->width, map->height,  
                                     msCreateDefaultOutputFormat(map, driver),
-                                    map->web.imagepath, map->web.imageurl);
+                                    map->web.imagepath, map->web.imageurl, map->resolution);
         bFreeImage = 1;
     }
     else
@@ -3425,7 +3426,7 @@ int msDrawVectorLayerAsRasterSWF(mapObj *map, layerObj *layer, imageObj *image)
     {
         imagetmp = msImageCreateGD(map->width, map->height,  
                                    msCreateDefaultOutputFormat(map, driver),
-                                   map->web.imagepath, map->web.imageurl);
+                                   map->web.imagepath, map->web.imageurl, map->resolution);
         bFreeImage = 1;
     }
     else
